projects/optic/src/__tests__/integration/__snapshots__/spec-push.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optic spec push can push a spec to a repo 1`] = `
"Automatically adding the git sha git:COMMIT-HASH and branch git:master as tags 

Uploading spec for api todo get optic id from url with tags env:production, the-favorite-api, git:COMMIT-HASH, git:master
Succesfully uploaded spec to Optic. View the spec here TODODODODOO
"
`;

exports[`optic spec push does not automatically add git tags when not clean state 1`] = `
"Not automatically including any git tags because the current working directory has uncommited changes.

Uploading spec for api todo get optic id from url 
Succesfully uploaded spec to Optic. View the spec here TODODODODOO
"
`;

exports[`optic spec push requires x-optic-url 1`] = `
"/Users/nicholaslim/Desktop/repos/optic/projects/optic/node_modules/ts-node/src/index.ts:843
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
../../src/commands/diff/diff.ts(142,32): error TS2554: Expected 2 arguments, but got 1.
../../src/commands/diff/diff.ts(150,23): error TS2554: Expected 2 arguments, but got 1.

    at createTSError (/Users/nicholaslim/Desktop/repos/optic/projects/optic/node_modules/ts-node/src/index.ts:843:12)
    at reportTSError (/Users/nicholaslim/Desktop/repos/optic/projects/optic/node_modules/ts-node/src/index.ts:847:19)
    at getOutput (/Users/nicholaslim/Desktop/repos/optic/projects/optic/node_modules/ts-node/src/index.ts:1057:36)
    at Object.compile (/Users/nicholaslim/Desktop/repos/optic/projects/optic/node_modules/ts-node/src/index.ts:1411:41)
    at Module.m._compile (/Users/nicholaslim/Desktop/repos/optic/projects/optic/node_modules/ts-node/src/index.ts:1596:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1213:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/nicholaslim/Desktop/repos/optic/projects/optic/node_modules/ts-node/src/index.ts:1600:12)
    at Module.load (node:internal/modules/cjs/loader:1037:32)
    at Function.Module._load (node:internal/modules/cjs/loader:878:12)
    at Module.require (node:internal/modules/cjs/loader:1061:19) {
  diagnosticCodes: [ 2554, 2554 ]
}
"
`;
